Added a trail & fixed some bugs

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,8 @@ ProjectName=Side Scroller BP Game Template
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="MobileStarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+bCompressed=True
+bSkipEditorContent=True
+
